fix letter-spacing on .project-card-text

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,7 @@ address {
 }
 .project-card-text {
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: var(--slate);
 }
 /* end region Portfolio */
